test/invalid-syntax/66358_function_paran/missing_paranthesis_function.mag
-- Author: 66358, Gustavo Cardoso

fun succ n : Int -> Int = n + 1